Fixed bug causing modules to shift on click

--- a/Sogeti.Capstone.Web/Sogeti.Capstone.Web/Content/Site.css
+++ b/Sogeti.Capstone.Web/Sogeti.Capstone.Web/Content/Site.css
@@ -37,10 +37,6 @@ h3 {
     font-weight: normal;
 }
 
-.fade.in {
-    overflow: hidden;
-}
-
 label {
     font-weight: normal;
 }
